// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics / Component / With ng-content / Simple Default 1`] = `
<storybook-wrapper>
  <storybook-with-ng-content>
    Content value: 
    <div
      style="color: #1e88e5;"
    >
      <h1>
        This is rendered in ng-content
      </h1>
    </div>
  </storybook-with-ng-content>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With ng-content / Simple Only Component 1`] = `
<storybook-wrapper>
  <storybook-with-ng-content>
    Content value: 
    <div
      style="color: #1e88e5;"
    />
  </storybook-with-ng-content>
</storybook-wrapper>
`;

exports[`Storyshots Basics / Component / With ng-content / Simple With Dynamic Content And Args 1`] = `
<storybook-wrapper>
  <storybook-with-ng-content>
    Content value: 
    <div
      style="color: #1e88e5;"
    >
      <h1>
        Default content
      </h1>
    </div>
  </storybook-with-ng-content>
</storybook-wrapper>
`;
